--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-<html>
-<body>Hello!</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="handheldfriendly" content="true">
+    <meta name="mobileoptimized" content="width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="all">
+    <meta name="description" property="og:description" content="Freelance Web Design &amp; Front-end Development based in Sheffield, UK.">
+
+    <style>
+      * {margin: 0; padding: 0;}
+      html,body {height: 100%;}
+      body {background: url(holding.svg) no-repeat 50%; background-size: cover;}
+      h1 {position: absolute; left: -1000em;}
+    </style>
+
+    <title>RECODESIGN - Freelance Web Design &amp; Front-end Development</title>
+  </head>
+  <body>
+    <h1>Soon!</h1>
+  </body>
 </html>
