Moving some text

--- a/about/index.html
+++ b/about/index.html
@@ -64,8 +64,6 @@
 
     <h2 class="divide-before">What I do</h2>
 
-    <p>I have an office in the <a href="http://www.sitegallery.org">Site Gallery</a> where I do most of my work. However, when required, I also work with the client at their place of business.</p>
-
     <div class="box">
       <h3>Front-end Development</h3>
       <p>This is what I specialise in. Most jobs I do now require a <b>responsive build</b> and I strive to create clean, modular and well structured CSS. My HTML is <b>semantic</b>, with <b>accessibility</b> in mind and I have systems in place to test my work across a browser matrix before release. I hand-code and have amassed a vast collection of snippets over the years to increase production speed.</p>
@@ -108,6 +106,8 @@
       </ul>
     </div>
 
+    <p>I have an office in the <a href="http://www.sitegallery.org">Site Gallery</a> (near Sheffield's train station) where I do most of my work. However, when required, I also work with the client at their place of business.</p>
+
     <p class="cta">
       <a href="../contact/index.html" class="button">Contact me</a>
     </p>
@@ -125,7 +125,7 @@
     <p>In 2009, I co-founded a company we called <a href="https://web.archive.org/web/20130308234813/http://www.curlyweb.co.uk/">Curly Web</a>. We focused on web applications for small to medium sized businesses. When I left Technophobia in 2011, I took up Curly Web full-time. However in 2013, I left Curly Web to become a Freelance Web Designer and Front-end Developer.</p>
 
     <h3><span class="strikethrough">Brassbot</span> RECODESIGN</h3>
-    <p>Since June 2013, I have been working freelance and you will see <a href="../work/index.html">my work</a> on this website. In this time, my company has had a re-brand but I still do the same things (and even more!). I also have an office in the <a href="http://www.sitegallery.org">Site Gallery</a> near Sheffield's train station.</p>
+    <p>Since June 2013, I have been working freelance and you will see <a href="../work/index.html">my work</a> on this website. In this time, my company has had a re-brand but I still do the same things (and even more!).</p>
 
     <h2 class="divide-before align-centre">Outside of work</h2>
 
