--- a/work/rattle.html
+++ b/work/rattle.html
@@ -70,7 +70,7 @@
       <li>
               <blockquote>
         <div>
-          <p>Richard is great to work with. He has a critical design eye, understands and promotes user centred and agile approaches to work, and takes time to understand a brief.</p>
+          <p>Richard is great to work with. He has a critical design eye, understands and promotes user centred and agile approaches to work, and takes time to understand user needs and problem space.</p>
         </div>
         <footer>
           <cite>
