--- a/about/index.html
+++ b/about/index.html
@@ -66,7 +66,7 @@
 
     <div class="box">
       <h3>Front-end Development</h3>
-      <p>This is what I specialise in. Most jobs I do now require a <b>responsive build</b> and I strive to create clean, modular and well structured CSS. My HTML is <b>semantic</b>, with <b>accessibility</b> in mind and I have systems in place to test my work across a browser matrix before release. I hand-code and have amassed a vast collection of snippets over the years to increase production speed.</p>
+      <p>This is what I specialise in. Most jobs I do now require a <b>responsive build</b> and I strive to create clean, modular and well structured CSS. My HTML is <b>semantic</b>, with <b>accessibility</b> in mind and I have systems in place to test my work across a browser matrix before release. I hand-code and have amassed a large collection of snippets over the years to increase production speed.</p>
 
       <p>A lot of my work involves me either creating <b>HTML/CSS templates</b> to be handed to Software Developers so they can integrate it into their application. Or it involves me working directly in the application and updating it according to a brief or design.</p>
 
@@ -76,8 +76,9 @@
       <ul>
         <li>HTML5</li>
         <li>CSS using Sass/SCSS</li>
-        <li>Javascript using jQuery</li>
-        <li>Sublime Text Editor</li>
+        <li>JavaScript using jQuery</li>
+        <li><a href="https://www.sublimetext.com/">Sublime Text Editor</a></li>
+        <li><a href="http://hammerformac.com/">Hammer</a></li>
         <li>Git</li>
         <li>Mac OS</li>
         <li>VirtualBox</li>
@@ -102,7 +103,7 @@
         <li>Omnigraffle</li>
         <li>Whiteboards &amp; Post-it notes</li>
         <li>Photoshop</li>
-        <li>Sketch</li>
+        <li><a href="https://www.sketchapp.com/">Sketch</a></li>
       </ul>
     </div>
 
@@ -129,7 +130,7 @@
 
     <h2 class="divide-before align-centre">Outside of work</h2>
 
-    <p>A huge benefit of freelancing is that it offers a lot of flexibility with time. I love going deep into work projects, solving new and exciting problems, but I also love spending time on other pursuits; from trekking, skiing, diving and running, to furthering my education in the areas of philosophy, psychology and political history. I would therefore describe myself as a pragmatic, philosophical adventure seeker!</p>
+    <p>A huge benefit of freelancing is that it offers a lot of flexibility with time. I love going deep into work projects, solving new and exciting problems, but I also love spending time on other pursuits; from trekking, skiing, diving and running, to furthering my education in the areas of philosophy, behavioural psychology and political history. I would therefore describe myself as a pragmatic, philosophical adventure seeker!</p>
 
     <figure class="bordered">
       <img src="../assets/img/content/me-aco.jpg" alt="Me looking over an ice-capped mountain range">
