year, testimonial, copy updates

--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,7 @@
       <h4>User Experience Design</h4>
       <p><acronym title="User Experience">UX</acronym> Design is an essential stage to better understand the requirements for the website. UX Design techniques can also be invaluable in helping to validate previous design decisions or to solve problems with existing websites.</p>
 
-      <p>Some websites can be designed and built without the need of extensive UX design processes. Whether it is because of a lack of budget/time, or that no new problems are being solved, some of my clients have just needed a web presence that has been designed and built using <a href="https://en.wikipedia.org/wiki/Heuristic">heuristics</a>. Whatever the project circumstance, I can propose and implement appropriate UX Design processes for the job.</p>
+      <p>Some websites can be designed and built without the need of extensive UX design processes. Whether it is because of a lack of budget/time, or that no new problems are being solved, some of my clients have just needed a web presence that has been designed and built using <a href="https://en.wikipedia.org/wiki/Heuristic_evaluation">heuristics</a>. Whatever the project circumstance, I can propose and implement appropriate UX Design processes for the job.</p>
 
       <h4>Interaction Design</h4>
       <p>With the requirements for the website collected, I am able to produce sketches, wireframes, graphical mock-ups or prototypes that satisfy these requirements and solve the problems identified.</p>
@@ -102,8 +102,8 @@
         <li>Balsamiq</li>
         <li>Omnigraffle</li>
         <li>Whiteboards &amp; Post-it notes</li>
-        <li>Photoshop</li>
         <li><a href="https://www.sketchapp.com/">Sketch</a></li>
+        <li>Photoshop</li>
       </ul>
     </div>
 
@@ -168,7 +168,7 @@
     </ul>
 
         <div class="info">
-          <p><b>RECODESIGN LTD</b> &copy; 2016</p>
+          <p><b>RECODESIGN LTD</b> &copy; <span class="year">2016</span></p>
           <p>
             <span>Registered in England and Wales</span>
             <span>Company No. 08577433</span>
