--- a/index.html
+++ b/index.html
@@ -206,18 +206,19 @@
       <h1 class="hide1">Testimonials</h1>
       <ul class="quotes">
         <li>
-                <blockquote>
-        <div>
-          <p>Rich delivers results and adds value at every step. He is highly dependable, trustworthy and a strong team player. Best of all never shies away from taking an existing idea to the cutting edge, and yet still remains on target and grounded in his assessments and recommendations.</p>
-          <p>Rich's contributions to ongoing projects for Split The Bills and Fit Property have significantly enhanced both businesses and ensured that their brand and customer experiences stand out and remain ahead of the game.</p>
-        </div>
-        <footer>
-          <cite>
-            <a href="https://www.linkedin.com/in/gautamapayment">Gautama Payment</a>
-            <span>Designer, Split The Bills &amp; Fit Property</span>
-          </cite>
-        </footer>
-      </blockquote>
+                  <blockquote>
+          <div>
+            <p>Rich is a rare breed - in that he can provide creative design solutions as well as pixel perfect front end development. His quality of delivery, response to feedback and obvious experience make him an invaluable team player.</p>
+            <p>Hire him with confidence.</p>
+          </div>
+          <footer>
+            <cite>
+              <b>Andrew Wood</b>
+              <span>Freelance Interaction Designer</span>
+              <i>(collaborated with on BBC projects)</i>
+            </cite>
+          </footer>
+        </blockquote>
         </li>
       </ul>
       <p class="cta-divide"><a href="testimonials/index.html" class="button">More Testimonials</a></p>
@@ -251,7 +252,7 @@
     </ul>
 
         <div class="info">
-          <p><b>RECODESIGN LTD</b> &copy; 2016</p>
+          <p><b>RECODESIGN LTD</b> &copy; <span class="year">2016</span></p>
           <p>
             <span>Registered in England and Wales</span>
             <span>Company No. 08577433</span>
