--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -54,6 +54,23 @@
     <h1>Testimonials</h1>
     <ul class="quotes">
       <li>
+                <blockquote>
+          <div>
+            <p>Rich is a rare breed - in that he can provide creative design solutions as well as pixel perfect front end development. His quality of delivery, response to feedback and obvious experience make him an invaluable team player.</p>
+            <p>Hire him with confidence.</p>
+          </div>
+          <footer>
+            <cite>
+              <b>Andrew Wood</b>
+              <span>Freelance Interaction Designer</span>
+              <i>(collaborated with on BBC projects)</i>
+            </cite>
+          </footer>
+        </blockquote>
+        <a href="../work/bbc.html">View <span>BBC</span> work</a>
+      </li>
+
+      <li>
               <blockquote>
         <div>
           <p>Rich delivers results and adds value at every step. He is highly dependable, trustworthy and a strong team player. Best of all never shies away from taking an existing idea to the cutting edge, and yet still remains on target and grounded in his assessments and recommendations.</p>
@@ -235,7 +252,7 @@
     </ul>
 
         <div class="info">
-          <p><b>RECODESIGN LTD</b> &copy; 2016</p>
+          <p><b>RECODESIGN LTD</b> &copy; <span class="year">2016</span></p>
           <p>
             <span>Registered in England and Wales</span>
             <span>Company No. 08577433</span>
