--- a/work/bbc.html
+++ b/work/bbc.html
@@ -60,6 +60,24 @@
 
     <p>All three Story Explorers are built on a Ruby on Rails' application.</p>
 
+    <ul class="quotes">
+      <li>
+                <blockquote>
+          <div>
+            <p>Rich is a rare breed - in that he can provide creative design solutions as well as pixel perfect front end development. His quality of delivery, response to feedback and obvious experience make him an invaluable team player.</p>
+            <p>Hire him with confidence.</p>
+          </div>
+          <footer>
+            <cite>
+              <b>Andrew Wood</b>
+              <span>Freelance Interaction Designer</span>
+              <i>(collaborated with on BBC projects)</i>
+            </cite>
+          </footer>
+        </blockquote>
+      </li>
+    </ul>
+
     <h2 class="divide-before" id="the-archers">The Archers' Story Explorer</h2>
 
     <ul class="tags">
@@ -176,7 +194,7 @@
     </ul>
 
         <div class="info">
-          <p><b>RECODESIGN LTD</b> &copy; 2016</p>
+          <p><b>RECODESIGN LTD</b> &copy; <span class="year">2016</span></p>
           <p>
             <span>Registered in England and Wales</span>
             <span>Company No. 08577433</span>
