--- a/work/hive-it.html
+++ b/work/hive-it.html
@@ -106,7 +106,7 @@
     </ul>
 
         <div class="info">
-          <p><b>RECODESIGN LTD</b> &copy; 2016</p>
+          <p><b>RECODESIGN LTD</b> &copy; <span class="year">2016</span></p>
           <p>
             <span>Registered in England and Wales</span>
             <span>Company No. 08577433</span>
