--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
       <h1>I'm <b>Richard Jones</b>, a Freelance Web Designer &amp; Front-end Developer.</h1>
       <p class="extra">Based in Sheffield, UK, I freelance for individuals, start-ups, web agencies and businesses of all shapes and sizes.</p>
-      <p class="cta-divide"><a href="about/index.html" class="button">About me</a></p>
+      <p class="cta-divide"><a href="about/index.html" class="button">What I do</a></p>
     </div>
   </section>
 
