--- a/work/shedcode.html
+++ b/work/shedcode.html
@@ -64,7 +64,7 @@
 
     <p>I first worked with ShedCode's James Jefferies at Technophobia. Since 2013 we have collaborated on projects for the BBC, London Philharmonic Orchestra, Somerset House and Caper.</p>
 
-    <p>The headlining project we have worked on together was the <a href="bbc.html">Story Explorer for the BBC</a>. I was involved with both Interaction Design and Front-end Development. >Most recently, we have worked on a project with Sheffield University.</p>
+    <p>The headlining project we have worked on together was the <a href="bbc.html">Story Explorer for the BBC</a>. I was involved with both Interaction Design and Front-end Development. Most recently, we have worked on a project with Sheffield University.</p>
 
     <p class="cta">
       <a href="http://www.shedcode.co.uk" class="button icon-external-link">ShedCode</a>
