Testimonials addition and updates

--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -73,18 +73,17 @@
       <li>
               <blockquote>
         <div>
-          <p>Rich delivers results and adds value at every step. He is highly dependable, trustworthy and a strong team player. Best of all never shies away from taking an existing idea to the cutting edge, and yet still remains on target and grounded in his assessments and recommendations.</p>
-          <p>Rich's contributions to ongoing projects for Split The Bills and Fit Property have significantly enhanced both businesses and ensured that their brand and customer experiences stand out and remain ahead of the game.</p>
+          <p>I have worked with a number of front-end web developers since starting my career, but none are as detail orientated as Richard. His ability to produce pixel perfect designs is unparalleled and we have cultivated an amazing collaboration orientated relationship.</>
+          <p>I have no doubt that I will work with Richard beyond my time at Split The Bills and would recommend his services to anyone looking for a front-end web developer/designer.</p>
         </div>
         <footer>
           <cite>
-            <a href="https://www.linkedin.com/in/gautamapayment">Gautama Payment</a>
-            <span>Designer, Split The Bills &amp; Fit Property</span>
+            <a href="https://www.linkedin.com/in/paul-goodman-72824934">Paul Goodman</a>
+            <span>Brand Manager / Graphic Designer, Split The Bills</span>
           </cite>
         </footer>
       </blockquote>
-        <a href="../work/split-the-bills.html">Split The Bills work</a> &amp;
-        <a href="../work/fit-property.html">Fit Property work</a>
+        <a href="../work/split-the-bills.html">View <span>Split The Bills</span> work</a>
       </li>
 
       <li>
@@ -99,7 +98,7 @@
           </cite>
         </footer>
       </blockquote>
-        <a href="../work/anne-saunders-physiotherapy.html"><span>Anne Saunders Physiotherapy</span> View work</a>
+        <a href="../work/anne-saunders-physiotherapy.html">View <span>Anne Saunders Physiotherapy</span> work</a>
       </li>
 
       <li>
@@ -119,6 +118,23 @@
       </li>
 
       <li>
+              <blockquote>
+        <div>
+          <p>Rich delivers results and adds value at every step. He is highly dependable, trustworthy and a strong team player. Best of all never shies away from taking an existing idea to the cutting edge, and yet still remains on target and grounded in his assessments and recommendations.</p>
+          <p>Rich's contributions to ongoing projects for Fit Property &amp; Split The Bills have significantly enhanced both businesses and ensured that their brand and customer experiences stand out and remain ahead of the game.</p>
+        </div>
+        <footer>
+          <cite>
+            <a href="https://www.linkedin.com/in/gautamapayment">Gautama Payment</a>
+            <span>Designer, Fit Property &amp; Split The Bills</span>
+          </cite>
+        </footer>
+      </blockquote>
+        <a href="../work/split-the-bills.html">Split The Bills work</a> &amp;
+        <a href="../work/fit-property.html">Fit Property work</a>
+      </li>
+
+      <li>
                 <blockquote>
           <div>
             <p>Mantra Medical required a brand and online presence that would convey our professionalism to healthcare institutions and investors. Richard delivered far above our expectations and his work has undoubtedly helped in our activities over the last 5 years.</p>
@@ -130,7 +146,7 @@
             </cite>
           </footer>
         </blockquote>
-        <a href="../work/mantra-medical.html"><span>Mantra Medical</span> View work</a>
+        <a href="../work/mantra-medical.html">View <span>Mantra Medical</span> work</a>
       </li>
 
       <li>
@@ -145,7 +161,7 @@
           </cite>
         </footer>
       </blockquote>
-        <a href="../work/peak-city-physio.html"><span>Peak City Physio</span> View work</a>
+        <a href="../work/peak-city-physio.html">View <span>Peak City Physio</span> work</a>
       </li>
       
       <li>
@@ -160,7 +176,7 @@
           </cite>
         </footer>
       </blockquote>
-        <a href="../work/hive-it.html"><span>Hive IT</span> View work</a>
+        <a href="../work/hive-it.html">View <span>Hive IT</span> work</a>
       </li>
     </ul>
 
