--- a/work/split-the-bills.html
+++ b/work/split-the-bills.html
@@ -70,13 +70,13 @@
       <li>
               <blockquote>
         <div>
-          <p>Rich delivers results and adds value at every step. He is highly dependable, trustworthy and a strong team player. Best of all never shies away from taking an existing idea to the cutting edge, and yet still remains on target and grounded in his assessments and recommendations.</p>
-          <p>Rich's contributions to ongoing projects for Split The Bills and Fit Property have significantly enhanced both businesses and ensured that their brand and customer experiences stand out and remain ahead of the game.</p>
+          <p>I have worked with a number of front-end web developers since starting my career, but none are as detail orientated as Richard. His ability to produce pixel perfect designs is unparalleled and we have cultivated an amazing collaboration orientated relationship.</>
+          <p>I have no doubt that I will work with Richard beyond my time at Split The Bills and would recommend his services to anyone looking for a front-end web developer/designer.</p>
         </div>
         <footer>
           <cite>
-            <a href="https://www.linkedin.com/in/gautamapayment">Gautama Payment</a>
-            <span>Designer, Split The Bills &amp; Fit Property</span>
+            <a href="https://www.linkedin.com/in/paul-goodman-72824934">Paul Goodman</a>
+            <span>Brand Manager / Graphic Designer, Split The Bills</span>
           </cite>
         </footer>
       </blockquote>
