--- a/work/fit-property.html
+++ b/work/fit-property.html
@@ -68,12 +68,12 @@
               <blockquote>
         <div>
           <p>Rich delivers results and adds value at every step. He is highly dependable, trustworthy and a strong team player. Best of all never shies away from taking an existing idea to the cutting edge, and yet still remains on target and grounded in his assessments and recommendations.</p>
-          <p>Rich's contributions to ongoing projects for Split The Bills and Fit Property have significantly enhanced both businesses and ensured that their brand and customer experiences stand out and remain ahead of the game.</p>
+          <p>Rich's contributions to ongoing projects for Fit Property &amp; Split The Bills have significantly enhanced both businesses and ensured that their brand and customer experiences stand out and remain ahead of the game.</p>
         </div>
         <footer>
           <cite>
             <a href="https://www.linkedin.com/in/gautamapayment">Gautama Payment</a>
-            <span>Designer, Split The Bills &amp; Fit Property</span>
+            <span>Designer, Fit Property &amp; Split The Bills</span>
           </cite>
         </footer>
       </blockquote>
