About page update with additional fixes

--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
 
     <title>About me - RECODESIGN - Freelance Web Design &amp; Front-end Development</title>
   </head>
-  <body class="">
+  <body class="about">
   
     <header role="banner">
       <div class="wrap">
@@ -50,18 +50,19 @@
     <main role="main">
 
 <section class="about">
-  <div class="wrap formatting">
+  <div class="intro">
+    <div class="wrap formatting">
+      <h1>About me</h1>
 
-    <h1>About me</h1>
-
-    <div class="intro">
       <figure class="avatar">
         <img src="../assets/img/content/me.jpg" alt="My face">
       </figure>
 
       <p>I'm <b>Richard Jones</b>, a Freelance Web Designer &amp; Front-end Developer. Based in Sheffield, UK, I freelance for individuals, start-ups, web agencies and businesses of all shapes and sizes.</p>
     </div>
+  </div>
 
+  <div class="wrap formatting">
     <h2 class="divide-before">What I do</h2>
 
     <div class="box">
