--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <section class="profile column formatting">
     <div class="wrap">
       <figure class="avatar">
-        <img src="assets/img/content/me.jpg" alt="My face">
+        <a href="about/index.html"><img src="assets/img/content/me.jpg" alt="My face"></a>
       </figure>
 
       <h1>I'm <b>Richard Jones</b>, a Freelance Web Designer &amp; Front-end Developer.</h1>
